# aoc-2024

./: .gitignore  Cargo.toml  README.md  template_instructions.md
.cargo/: config.toml
.github/workflows/: readme-stars.yml
data/examples/: 07.txt
src/: lib.rs
