[package]
name = "advent_of_code"
version = "0.11.0"
authors = ["Felix Spöttel <1682504+fspoettel@users.noreply.github.com>"]
edition = "2024"
default-run = "advent_of_code"
publish = false

[profile.release]
codegen-units = 1
lto = "fat"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
doctest = false

[profile.dhat]
inherits = "release"
debug = 1

[features]
dhat-heap = ["dhat"]
today = ["chrono"]
test_lib = []

[dependencies]
cached = "0.56"

# Solution dependencies
hashbrown = { version = "0.15.2", features = ["rayon"] }
itertools = "0.14"
nom = "7.1.3"
num = "0.4.3"
pathfinding = "4.12.0"
rayon = "1.10.0"
regex = "1.11.1"
# aoc-mine = { git = "https://github.com/stevenwcarter/aoc-mine" }
aoc-mine = { path = "../aoc-mine" }

# Template dependencies
chrono = { version = "0.4.38", optional = true }
dhat = { version = "0.3.3", optional = true }
pico-args = "0.5.0"
tinyjson = "2.5.1"
dashmap = { version = "6.1.0", features = ["rayon"] }
atoi_simd = "0.17.0"
nohash = "0.2.0"
nohash-hasher = "0.2.0"
rustc-hash = "2.1.1"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = "0.5.4"
